--- a/AutoLayoutStoryBoard/Base.lproj/Main.storyboard
+++ b/AutoLayoutStoryBoard/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="ipad12_9" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,110 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aeY-pY-KtI" userLabel="Green Box">
+                                <rect key="frame" x="0.0" y="20" width="1024" height="1346"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mwz-o5-tmy" userLabel="Purple Box">
+                                        <rect key="frame" x="379.5" y="1276" width="624.5" height="50"/>
+                                        <color key="backgroundColor" red="0.52783094381774665" green="0.048859753307556875" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="Unj-Iy-jwN"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BcZ-2g-gcR" userLabel="Blue Middle Box">
+                                        <rect key="frame" x="487" y="648" width="50" height="50"/>
+                                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="79R-6Y-wuB"/>
+                                            <constraint firstAttribute="height" constant="50" id="dYY-eF-JMG"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vwY-Ca-kFh" userLabel="Blue Top Box">
+                                        <rect key="frame" x="487" y="274" width="50" height="50"/>
+                                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="H1s-bE-gQm"/>
+                                            <constraint firstAttribute="width" constant="50" id="UNh-DY-Otf"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GTR-nl-0c8" userLabel="Blue Bottom Box">
+                                        <rect key="frame" x="487" y="1047" width="50" height="50"/>
+                                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="rAg-8b-2ER"/>
+                                            <constraint firstAttribute="width" constant="50" id="sxh-et-I5z"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SQy-WN-PPT" userLabel="Red Box">
+                                        <rect key="frame" x="860" y="20" width="144" height="46"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BKr-4j-GH9" userLabel="Orange Right Box">
+                                                <rect key="frame" x="86" y="8" width="50" height="30"/>
+                                                <color key="backgroundColor" name="systemOrangeColor" catalog="System" colorSpace="catalog"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="eXF-ei-NvS"/>
+                                                    <constraint firstAttribute="width" constant="50" id="gXN-q6-41M"/>
+                                                </constraints>
+                                                <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pV6-f7-ZKa" userLabel="Orange Left Box">
+                                                <rect key="frame" x="8" y="8" width="70" height="30"/>
+                                                <color key="backgroundColor" name="systemOrangeColor" catalog="System" colorSpace="catalog"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="70" id="6lN-Hb-aqG"/>
+                                                    <constraint firstAttribute="height" constant="30" id="SLW-Oz-6eo"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                        <color key="backgroundColor" red="1" green="0.0093617555427757404" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="pV6-f7-ZKa" secondAttribute="bottom" constant="8" id="49Z-iq-sGv"/>
+                                            <constraint firstItem="BKr-4j-GH9" firstAttribute="top" secondItem="SQy-WN-PPT" secondAttribute="top" constant="8" id="Ib5-Kp-LEQ"/>
+                                            <constraint firstAttribute="trailing" secondItem="BKr-4j-GH9" secondAttribute="trailing" constant="8" id="Oq7-h1-f1T"/>
+                                            <constraint firstItem="pV6-f7-ZKa" firstAttribute="leading" secondItem="SQy-WN-PPT" secondAttribute="leading" constant="8" id="OuX-HJ-Yt2"/>
+                                            <constraint firstAttribute="bottom" secondItem="BKr-4j-GH9" secondAttribute="bottom" constant="8" id="QMk-P7-mmg"/>
+                                            <constraint firstItem="BKr-4j-GH9" firstAttribute="leading" secondItem="pV6-f7-ZKa" secondAttribute="trailing" constant="8" id="U4l-DJ-9ID"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.97680455450000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="vwY-Ca-kFh" firstAttribute="centerX" secondItem="aeY-pY-KtI" secondAttribute="centerX" id="EDg-f9-nzA"/>
+                                    <constraint firstAttribute="trailing" secondItem="SQy-WN-PPT" secondAttribute="trailing" constant="20" id="Ex7-gv-5nn"/>
+                                    <constraint firstItem="vwY-Ca-kFh" firstAttribute="bottom" secondItem="BcZ-2g-gcR" secondAttribute="top" multiplier="0.5" id="Nu1-7S-dRI"/>
+                                    <constraint firstItem="BcZ-2g-gcR" firstAttribute="centerY" secondItem="aeY-pY-KtI" secondAttribute="centerY" id="PYN-kT-3bt"/>
+                                    <constraint firstAttribute="bottom" secondItem="mwz-o5-tmy" secondAttribute="bottom" constant="20" id="Xhn-nZ-cYS"/>
+                                    <constraint firstItem="SQy-WN-PPT" firstAttribute="top" secondItem="aeY-pY-KtI" secondAttribute="top" constant="20" id="cjZ-ab-iRQ"/>
+                                    <constraint firstItem="GTR-nl-0c8" firstAttribute="top" secondItem="BcZ-2g-gcR" secondAttribute="bottom" multiplier="1.5" id="dJN-CZ-KRO"/>
+                                    <constraint firstItem="mwz-o5-tmy" firstAttribute="width" secondItem="aeY-pY-KtI" secondAttribute="width" multiplier="0.61" id="gMr-Ab-Clk"/>
+                                    <constraint firstItem="BcZ-2g-gcR" firstAttribute="centerX" secondItem="aeY-pY-KtI" secondAttribute="centerX" id="jJE-mO-i7p"/>
+                                    <constraint firstItem="GTR-nl-0c8" firstAttribute="centerX" secondItem="aeY-pY-KtI" secondAttribute="centerX" id="jNK-bI-uSb"/>
+                                    <constraint firstAttribute="trailing" secondItem="mwz-o5-tmy" secondAttribute="trailing" constant="20" id="xRS-Gb-Qr9"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="aeY-pY-KtI" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="AXF-7Y-KD7"/>
+                            <constraint firstItem="aeY-pY-KtI" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Bjl-c7-aFe"/>
+                            <constraint firstItem="aeY-pY-KtI" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="DlA-2j-2Ze"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="aeY-pY-KtI" secondAttribute="bottom" id="IZV-Ty-GTB"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="aeY-pY-KtI" secondAttribute="trailing" id="Med-ks-WFi"/>
+                            <constraint firstItem="aeY-pY-KtI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="dgb-s1-Caf"/>
+                            <constraint firstItem="aeY-pY-KtI" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="eQ3-4x-m9g"/>
+                            <constraint firstItem="aeY-pY-KtI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ul4-C4-ivZ"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="137.6953125" y="133.96778916544656"/>
         </scene>
     </scenes>
 </document>
